Trocando a tag div para main

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
  <body>
 
-   <div class="container"> 
+   <main class="container"> <!-- O que é uma main?-->
     <img src="img/flores.png" class="imagem_fundo"> 
 
-    <div class="container-form">
+    <div class="container-form"><!-- Div é como se fosse um container e vai agrupar tudo que está nela -->
      <img src="img/logoBranco.jpg" class="logo_branco">
 
        <form>
@@ -32,6 +32,6 @@
           <p>Ainda não tem conta? <span>Cadastre-se</span></p>
 
        </div>
-     </div>
+   </main>
   </body>
 </html>
